  * Miguel Figueiredo
    - Updated Portuguese translation (pt.po)
  * Giuseppe Sacco
    - applied patch for normalizing menus and some italian translation (it.po)
  * h3lios
    - Added Albanian translation (sq.po)
  * Jordi Mallach
    - Update Catalan translation (ca.po).
  * Joey Hess
    - Use po2debconf rather than hand-hackery in generating demo.templates.

 -- Christian Perrier <bubulle@debian.org>  Tue, 27 Jan 2004 07:47:25 +0100

kbd-chooser (0.39) unstable; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Alastair McKinstry
    - Updated Irish (ga.po) translation.
  * Matt Kraai
    - Fix the capitalization of the menu entry.
  * Christian Perrier
    - Run debconf-updatepo after the above change
    - Unfuzzied translations after the above change
  * Joey Hess
    - Mention PS-2 in kbd-chooser/kbd/at.
  * Christian Perrier
    - Run debconf-updatepo after the above change
    - Updated french translation
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated Dutch (nl.po) translation
  * André Luís Lopes
    - Updated Brazilian Portuguese (pt_BR) translation.
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Kęstutis Biliūnas
    - Updated Lithuanian translation (lt.po).
  * Anmar Oueja
    - created and translated to Arabic (ar.po)
  * Teófilo Ruiz Suárez
    - Updated Spanish translations (po/es.po)
  * Miroslav Kure
    - Updated Czech translation
  * Peter Mann
    - Updated Slovak translation
  * Nikolai Prokoschenko
    - updated russian translation (ru.po)
  * Anmar Oueja
    - Updated Arabic translation (ar.po)
  * Claus Hindsgaul
    - Update da.po (Danish) translation.
  * Alwin Meschede
    - Updated German translation (de.po)
  * Nikolai Prokoschenko
    - Updated russian translation (ru.po)
  * Ming Hua
    - Updated Simplified Chinese translation (zh_CN.po)
  * Safir Secerovic
    - Update Bosnian translation (bs.po).
  * Stephen R. Marenka