@@ -17,6 +17,9 @@ kbd-chooser (0.40) UNRELEASED; urgency=low
     - Update Catalan translation (ca.po).
   * Joey Hess
     - Use po2debconf rather than hand-hackery in generating demo.templates.
+  * Denis Barbier
+    - Replace yes/no values by true/false in debian-installer/serial-console.
+      Previous version did work, but using canonical values is less confusing.
 
  -- Christian Perrier <bubulle@debian.org>  Tue, 27 Jan 2004 07:47:25 +0100
 
